<resources>
    <string name="app_title">RUEDAS RARAS</string>

    <string name="app_name">RR_Test_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_qr">QR Reader</string>
    <string name="menu_database">Load database</string>

    <!-- Event details -->
    <string name="event_details_name">Evento:</string>
    <string name="event_details_description">Descripción:</string>
    <string name="event_details_date">Fecha:</string>
    <string name="event_details_time">Hora:</string>
    <string name="event_details_location">Lugar:</string>
    <string name="title_activity_event_location">EventLocation</string>


    <string name="scan_activity_center_qr">Center QR code</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
</resources>
